src/objects/Market_Report_Content_Update__c.object
<CustomObject>
    <description>MG_Market Report Content Update</description>
    <fields>
        <fullName>Block_1_Market_Highlights__c</fullName>
        <label>Block 1 - Market Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Block_2_Market_Highlights__c</fullName>
        <label>Block 2 - Market Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Block_3_Market_Highlights__c</fullName>
        <label>Block 3 - Market Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Key_Highlights__c</fullName>
        <label>Community - Key Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distress_Key_Highlights__c</fullName>
        <label>Distress - Key Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Economy_Key_Highlights__c</fullName>
        <label>Economy - Key Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Intro_Market_Highlights__c</fullName>
        <label>Intro - Market Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSA_Code__c</fullName>
        <label>MSA_Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Name_formula__c</fullName>
        <formula>Name</formula>
        <label>MSA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Index_Market_Highlights__c</fullName>
        <label>Meyers Index - Market Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prices_Existing_Detached_Key_Highlight__c</fullName>
        <label>Prices-Existing Detached - Key Highlight</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prices_New_Detached_Key_Highlights__c</fullName>
        <label>Prices-New Detached - Key Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Key_Highlights__c</fullName>
        <label>Sales - Key Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supply_Key_Highlights__c</fullName>
        <label>Supply - Key Highlights</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Market Report Content Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MSA_Code__c</columns>
        <columns>Intro_Market_Highlights__c</columns>
        <columns>Block_1_Market_Highlights__c</columns>
        <columns>Block_2_Market_Highlights__c</columns>
        <columns>Block_3_Market_Highlights__c</columns>
        <columns>Economy_Key_Highlights__c</columns>
        <columns>Community_Key_Highlights__c</columns>
        <columns>Supply_Key_Highlights__c</columns>
        <columns>Sales_Key_Highlights__c</columns>
        <columns>Prices_New_Detached_Key_Highlights__c</columns>
        <columns>Prices_Existing_Detached_Key_Highlight__c</columns>
        <columns>Distress_Key_Highlights__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Arizona</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>AZ</value>
        </filters>
        <label>Arizona</label>
    </listViews>
    <listViews>
        <fullName>California</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;, CA&quot;</value>
        </filters>
        <label>California</label>
    </listViews>
    <listViews>
        <fullName>Colorado</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;, CO&quot;</value>
        </filters>
        <label>Colorado</label>
    </listViews>
    <listViews>
        <fullName>Delaware</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PA-NJ-DE-MD</value>
        </filters>
        <label>Delaware</label>
    </listViews>
    <listViews>
        <fullName>District_of_Columbia</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PA-NJ-DE-MD</value>
        </filters>
        <label>District of Columbia</label>
    </listViews>
    <listViews>
        <fullName>Florida</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FL</value>
        </filters>
        <label>Florida</label>
    </listViews>
    <listViews>
        <fullName>Georgia</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;, GA&quot;</value>
        </filters>
        <label>Georgia</label>
    </listViews>
    <listViews>
        <fullName>Illinois</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;, IL&quot;</value>
        </filters>
        <label>Illinois</label>
    </listViews>
    <listViews>
        <fullName>Indiana</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>-IN</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;, IN&quot;</value>
        </filters>
        <label>Indiana</label>
    </listViews>
    <listViews>
        <fullName>Kentucky</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>KY</value>
        </filters>
        <label>Kentucky</label>
    </listViews>
    <listViews>
        <fullName>Maryland</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MD</value>
        </filters>
        <label>Maryland</label>
    </listViews>
    <listViews>
        <fullName>Minnesota</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MN</value>
        </filters>
        <label>Minnesota</label>
    </listViews>
    <listViews>
        <fullName>Nevada</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;, NV&quot;</value>
        </filters>
        <label>Nevada</label>
    </listViews>
    <listViews>
        <fullName>New_Jersey</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NJ</value>
        </filters>
        <label>New Jersey</label>
    </listViews>
    <nameField>
        <label>MSA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Report Content Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_CBSA_Code</fullName>
        <active>false</active>
        <description>If the MSA Name field&apos;s prior value is not Blank OR the user is not an Admin then it cannot be changed.</description>
        <errorConditionFormula>AND(
OR(
NOT(ISBLANK(PRIORVALUE( MSA_Code__c ))), ISCHANGED( MSA_Code__c )),
NOT(OR($Profile.Id = &quot;00ei00000010rH3&quot;))
)</errorConditionFormula>
        <errorMessage>This field cannot be changed. Please contact your Salesforce Admin with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Record_Market_Name</fullName>
        <active>false</active>
        <description>If the MSA Name field&apos;s prior value is not Blank OR the user is not an Admin then it cannot be changed.</description>
        <errorConditionFormula>AND(
OR(
NOT(ISBLANK(PRIORVALUE( Name ))), ISCHANGED( Name )),
NOT(OR($Profile.Id = &quot;00ei00000010rH3&quot;))
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This field cannot be changed. Please contact your Salesforce Admin with any questions.</errorMessage>
    </validationRules>
</CustomObject>